--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
 		"build": "babel src -d ./dist",
 		"clean": "rimraf ./dist",
 		"start": "npm run build && node --max-old-space-size=20480 dist",
-		"start-debug": "npm run build && node inspect --trace-warnings --max-old-space-size=20480 dist",
-		"serve-react": "webpack-dev-server --open --config src/clientSocket/webpack.config.js",
-		"build-react": "webpack -p --config src/clientSocket/webpack.config.js"
+		"start-debug": "npm run build && node inspect --trace-warnings --max-old-space-size=20480 dist"
 	},
 	"_moduleAliases": {
 		"#src": "./src"
